--- a/mynewfile.html
+++ b/mynewfile.html
@@ -17,7 +17,9 @@ listening music, internet surfing</h4>
 <h2>mobile num</h2>
 <h4>9354200413</h4>
 <h3>address</h3>
+<h5> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, hic suscipit nihil quasi delectus expedita harum minus similique, illum facilis ipsum aliquam. Cum, facilis. Natus placeat harum adipisci eveniet praesentium.</h5>
 <h5> ho no 65 kanta shrawan jairam estate ayodhya bypass road bhopal </h5>
+<img src="OIP.jpg" alt="image not found" title="price = 21000/-">
 <h2>Gnail</h2>
 <h5> prabhashkush17@gmail.com </h5>
 </body>
