--- a/mynewfile.html
+++ b/mynewfile.html
@@ -3,6 +3,14 @@
 <title>web pages</title>
 <body>
 <h1>I am Prabhash Kumar</h1>
+<table border="">
+    <tr>
+        <th> S.no</th>
+        <th> Qualification</th>
+        <th> passing year</th>
+    </tr>
+
+</table>
 <h2>Age 31</h2>
 <h2>Qualification</h2>
 <h3>Class 10th</h3>
@@ -20,7 +28,67 @@ listening music, internet surfing</h4>
 <h5> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, hic suscipit nihil quasi delectus expedita harum minus similique, illum facilis ipsum aliquam. Cum, facilis. Natus placeat harum adipisci eveniet praesentium.</h5>
 <h5> ho no 65 kanta shrawan jairam estate ayodhya bypass road bhopal </h5>
 <img src="OIP.jpg" alt="image not found" title="price = 21000/-">
+<br>
+<audio src="Baby Calm Down (FULL VIDEO SONG) _ Selena Gomez & Rema Official Music Video 2023.mp3" controls></audio> <br>
+<video src="262215_tiny.mp4" controls></video>
+<marquee behavior="alternate" direction="right" scrollamount="15"> <h1>hello how are you....</h1></marquee>
 <h2>Gnail</h2>
 <h5> prabhashkush17@gmail.com </h5>
+<table border="15px" bgcolor=" lightpink" height="100px">
+    <tr bgcolor="lightgrey">
+        <th> S.no </th>
+        <th> Empolyee Name </th>
+        <th> Age </th>
+        <th> Mobile no </th>
+        <th> City </th>
+        <th> Qualification </th>
+         <th> salary </th>
+    </tr>
+    <tr>
+        <td> 1 </td>
+         <td> Rahul </td>
+         <td> 25 </td>
+         <td> 9856425485 </td>
+         <td> Bhopal </td>
+         <td> B.tech </td>
+         <td> 20000 </td>
+    </tr>
+    <tr>
+        <td> 2 </td>
+         <td> Mayank </td>
+         <td> 32 </td>
+         <td> 9856424565 </td>
+         <td bgcolor="lightblue"> Indore </td>
+         <td> M.tech </td>
+         <td> 40000 </td>
+    </tr>
+    <tr>
+        <td> 3 </td>
+         <td> Shakti </td>
+         <td> 30 </td>
+         <td> 9855645485 </td>
+         <td> jaipur </td>
+         <td> B.Com </td>
+         <td> 25000 </td>
+    </tr>
+    <tr>
+        <td> 4 </td>
+         <td> Prabhash </td>
+         <td> 28 </td>
+         <td> 9856425642 </td>
+         <td> Bhopal </td>
+         <td> M.com </td>
+         <td> 43000 </td>
+    </tr>
+    <tr>
+        <td> 5 </td>
+         <td> Rahul </td>
+         <td> 25 </td>
+         <td> 9856425485 </td>
+         <td> Bhopal </td>
+         <td> B.tech </td>
+         <td> 20000 </td>
+    </tr>
+</table>
 </body>
 </html>
