--- a/mynewfile.html
+++ b/mynewfile.html
@@ -89,6 +89,16 @@ listening music, internet surfing</h4>
          <td> B.tech </td>
          <td> 20000 </td>
     </tr>
+    <tr>
+        <td> 5 </td>
+        <td> Rahul </td>
+        <td> 25 </td>
+        <td> 9856425485 </td>
+        <td> Bhopal </td>
+        <td> B.tech </td>
+        <td> 20000 </td>
+
+    </tr>
 </table>
 </body>
 </html>
