--- a/mynewfile.html
+++ b/mynewfile.html
@@ -110,5 +110,60 @@ listening music, internet surfing</h4>
 
     </tr>
 </table>
+
+<table border="15px">
+    <tr>
+        <th colspan="3"> Student details </th>
+    </tr>
+    <tr> 
+        <th> Roll no </th>
+        <th> Name </th>
+        <th> city </th>
+    </tr>
+    <tr>
+        <td>101</td>
+        <td>shyam</td>
+        <td>indore</td>
+    </tr>
+    <tr>
+        <td>102</td>
+        <td>ram</td>
+        <td>gwalior</td>
+    </tr>
+    <tr>
+        <td>103</td>
+        <td>bablu</td>
+        <td>raipur</td>
+    </tr>
+
+    <h1> new table</h1>
+    <table border="">
+        <tr>
+            <th>S.no</th>
+            <th>Name</th>
+            <th> contact</th>
+        </tr>
+        <tr >
+            <td rowspan="2"> 1 </td>
+            <td> Aman </td>
+            <td> 123</td>
+        </tr>
+        <tr>
+            <td> Guddu</td>
+            <td> 876 </td>
+        </tr>
+        <tr>
+            <td rowspan="2"> 2
+                 </td>
+                 <td> Tyagi </td>
+                 <td> 657</td>
+        </tr>
+        <tr>
+            <td> Bablu </td>
+            <td> 3456 </td>
+        </tr>
+    </table>
+
+</table>
 </body>
 </html>
