--- a/newform.html
+++ b/newform.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>form webpage</title>
+        <title> form webpage </title>
         <body>
             <form action="">
                 <label for="name"> Name</label>
@@ -22,6 +22,14 @@
 
                 <label for="pin"> Password</label>
                 <input type="password" placeholder=" enter password" id="pin"> <br>
+
+                select country :<select >
+                    <option value=""> select </option>
+                    <option value=""> usa </option>
+                    <option value=""> india </option>
+                    <option value=""> srilanka </option>
+
+                </select> <br>
 
                 <input type="submit">
             </form>
