--- a/tabletask.html
+++ b/tabletask.html
@@ -1,8 +1,15 @@
 <html>
     <title> web pages</title>
     <body>
+        <a  href="https://www.youtube.com"> <button> Youtube</button></a>
+        <a  href="https://www.google.com"> <button> google</button></a>
+        <a  href="https://www.myntra.com/"> <button> mintra</button></a> <br>
+
+        <a href="./tabletask.html"><button> click here to go to form page</button></a>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14665.420372198321!2d77.35498980018184!3d23.23016201445764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397c5d464727d9ab%3A0x81af796f6432b005!2sVan%20Vihar%20National%20Park%2C%20Shymala%20Hills%2C%20Bhopal%2C%20Madhya%20Pradesh%20462002!5e0!3m2!1sen!2sin!4v1743753277560!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
         <h1> New Table Task </h1>
-        <table border="" height="50" width="80">
+        <table border="" height="50" width="80" cellspacing=" 20px" cellpadding="20px">
             <tr>
                 <th rowspan="2"> </th>
                 <th colspan="2"> average </th>
