--- a/newform.html
+++ b/newform.html
@@ -3,7 +3,29 @@
 <html>
     <head>
         <title> form webpage </title>
+        <style>
+            body{
+                background-color: aqua;
+            }
+            h1{
+                background-color: beige;
+            }
+            .head1{
+                background-color: pink;
+            }
+        </style>
         <body>
+            <h1 class=" head1"> welcome to css </h1>
+            <h1> welcome to css </h1>
+            <h1> welcome to css </h1>
+            <h1> welcome to css </h1>
+            <h1> welcome to css </h1>
+            <h1> welcome to css </h1>
+            <h1> welcome to css </h1>
+            <h1> welcome to css </h1>
+            <h1> welcome to css </h1>
+
+            <h1 style=" color: blue; background-color: bisque;"> welcome to css </h1>
             <form action="">
                 <label for="name"> Name</label>
                 <input type="text" placeholder=" enter your name" id="name"><br>
