first use of css

--- a/newform.html
+++ b/newform.html
@@ -2,10 +2,12 @@
 
 <html>
     <head>
+        <link rel="stylesheet" href="firststyle.css">
         <title> form webpage </title>
         <style>
             body{
-                background-color: aqua;
+
+                
             }
             h1{
                 background-color: beige;
@@ -18,13 +20,7 @@
             <h1 class=" head1"> welcome to css </h1>
             <h1> welcome to css </h1>
             <h1> welcome to css </h1>
-            <h1> welcome to css </h1>
-            <h1> welcome to css </h1>
-            <h1> welcome to css </h1>
-            <h1> welcome to css </h1>
-            <h1> welcome to css </h1>
-            <h1> welcome to css </h1>
-
+            
             <h1 style=" color: blue; background-color: bisque;"> welcome to css </h1>
             <form action="">
                 <label for="name"> Name</label>
@@ -55,6 +51,17 @@
 
                 <input type="submit">
             </form>
+
+            <section class=" container ">
+                <h1> hello heaker </h1>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga qui reprehenderit fugiat dolorum. Ducimus fuga debitis harum in aspernatur aut aliquid voluptatem consequatur dolor, unde reprehenderit hic quaerat, voluptate veritatis?</p>
+            </section>
+            <br>
+            <br>
+            <section class="head2">
+                <h1> About </h1>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit tenetur accusamus nemo ratione aperiam. Sapiente neque est, ullam quod odio excepturi. Doloremque repellendus quod fuga accusamus fugit necessitatibus facilis labore!</p>
+            </section>
         </body>
     </head>
 </html>
