--- a/homeworkflex2.html
+++ b/homeworkflex2.html
@@ -14,14 +14,16 @@
         </div>
 
         <div class="content">
-            <h1> 100% NATURAL FRESH INGREDIENTS </h1>
-            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam placeat accusamus aspernatur laborum saepe obcaecati eveniet eum, earum fugiat quos mollitia aliquid atque asperiores! Sit vero voluptate magni excepturi qui!
+            <h1> 100% NATURAL FRESH </h1>
+                <h1> INGREDIENTS </h1>
+            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam placeat accusamus aspernatur <br>laborum saepe obcaecati eveniet eum, earum fugiat quos mollitia aliquid atque asperiores! <br> Sit vero voluptate magni excepturi qui!
             </p>
             <ul>
-                <li> <p> Lorem ipsum dolor sit amet consectetur. </p></li>
-                <li> <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, hic!</p></li>
-                <li> <p> Lorem ipsum dolor sit amet consectetur. </p></li>
+                <li>  Lorem ipsum dolor sit amet consectetur. </li>
+                <li>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, hic!</li>
+                <li>  Lorem ipsum dolor sit amet consectetur. </li>
             </ul>
+            <br>
             <button> ABOUT US </button>
 
         </div>
